--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,20 @@
 {
-    "builds": [
-      {
-        "src": "app.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.py"
-      }
-    ]
-  }
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/qrflow",
+      "destination": "https://qrflow-xi.vercel.app/"
+    }
+  ]
+}
